<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Coseno">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FDEBD0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titulocoseno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/calculadora_coseno"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/seleccioncoseno"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/optiongradoscoseno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grados_coseno"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/optionradianescoseno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radianes_coseno"/>
            </RadioGroup>

            <EditText
                android:id="@+id/txtangulocoseno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:hint="@string/angulo_de_coseno"
                android:inputType="numberDecimal"/>

            <Button
                android:id="@+id/btncalcularcoseno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_calcularCoseno"
                android:backgroundTint="#F5B041"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/lbladvertenciacoseno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>