<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FDEBD0">

        <TextView
            android:id="@+id/tituloseno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="60dp">

            <Button
                android:id="@+id/btnseno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#F5B041"
                android:text="@string/calculadora_seno" />

            <Button
                android:id="@+id/btncoseno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#F5B041"
                android:text="@string/calculadora_coseno" />

            <Button
                android:id="@+id/btnraiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#F5B041"
                android:text="@string/calculadora_raiz" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>