<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seno">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FDEBD0">



            <LinearLayout
                android:id="@+id/layoutprin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tituloseno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/calculadora_seno"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/layoutprin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/seleccionseno"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/optiongradosseno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="14dp"
                        android:text="@string/grados_seno" />

                    <RadioButton
                        android:id="@+id/optionradianesseno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="14dp"
                        android:text="@string/radianes_seno" />
                </RadioGroup>

                <EditText
                    android:id="@+id/txtanguloseno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:hint="@string/angulo_seno"
                    android:inputType="numberDecimal" />

                <Button
                    android:id="@+id/btncalcularseno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:backgroundTint="#F5B041"
                    android:text="@string/btn_calcularSeno"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/lbladvertenciaseno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/layoutprin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp" />
            </LinearLayout>


    </LinearLayout>



</LinearLayout>