<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Raiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FDEBD0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculadora_raiz"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/txtnumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:hint="@string/numero_raiz"
                android:inputType="numberDecimal"/>

            <Button
                android:id="@+id/btncalcularraiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_calcularRaiz"
                android:backgroundTint="#F5B041"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/lbladvertenciaraiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>